@@ -1,5 +1,8 @@
 2013-06-16  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
+	* shr.el (shr-make-table): Cache the table rendering at the table
+	level, and not the <td> level.  This is a bit faster.
+
 	* eww.el (eww-render): Go to the correct ID when given URLs ending with
 	#id.
 
